--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
     "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
