--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.28.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "mui-datatables": "^4.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
