--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^3.1.2",
     "mui-datatables": "^4.2.2",
     "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-drag-drop-files": "^2.3.5",
